--- a/vuetify-project/src/scss/app.scss
+++ b/vuetify-project/src/scss/app.scss
@@ -8,17 +8,17 @@ html {
 }
 
 html {
-  font-family: 'KBF', sans-serif;
-  font-size: 10px;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  // font-family: 'KBF', sans-serif;
+  // font-size: 10px;
+  // -ms-text-size-adjust: 100%;
+  // -webkit-text-size-adjust: 100%;
 }
 
 body {
-  font-size: 1rem;
-  line-height: 1;
-  color: #000;
-  letter-spacing: -0.6000000238418579px;
+  // font-size: 1rem;
+  // line-height: 1;
+  // color: #000;
+  // letter-spacing: -0.6000000238418579px;
 }
 
 ol,
@@ -213,9 +213,66 @@ body {
   // padding:10rem;
 
   h1 {
-    font-size: 10rem;
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1rem;
   }
 }
 
 
 @import "carousel";
+
+
+.v-btn {
+  border: 1px #000 solid !important;
+}
+
+.v-main {
+  display: flex;
+  align-items: center;
+}
+
+.Components {
+  display: flex;
+  flex-direction: column;
+  border: 1px #000 solid;
+  padding: 2rem;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 46rem;
+}
+
+.MyComponent1 {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: aliceblue;
+  border: 1px #000 solid;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 26rem;
+}
+
+.MyComponent2 {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: antiquewhite;
+  border: 1px #000 solid;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 26rem;
+}
+
+.MyComponent21 {
+  background-color: chocolate;
+  border: 1px #000 solid;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 26rem;
+}
