--- a/vuetify-project/src/scss/app.scss
+++ b/vuetify-project/src/scss/app.scss
@@ -216,7 +216,16 @@ body {
     font-size: 2rem;
   }
   h2 {
-    font-size: 1rem;
+    font-size: 2rem;
+    color: red;
+  }
+  h3 {
+    font-size: 2rem;
+    color: blue;
+  }
+  h3 {
+    font-size: 2rem;
+    color: green
   }
 }
 
